force-app/main/default/objects/PPF_Account__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <formula>DATE(YEAR(Start_Date__c) + Time_Period__c, MONTH(Start_Date__c), DAY(Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>