force-app/main/default/objects/PPF_Account__c/fields/Maturity_Value__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Value__c</fullName>
    <label>Maturity Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>