force-app/main/default/objects/PPF_Account__c/fields/Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Time_Period__c</fullName>
    <label>Time Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>